# baseball-scorebook-tui

./: .gitignore  PLAN.md  README.md  pyproject.toml
baseball_scorebook/: __init__.py  __main__.py  app.py
baseball_scorebook/engine/: __init__.py  event_store.py  state.py
baseball_scorebook/models/: __init__.py  at_bat.py  constants.py  events.py  game.py  team.py
baseball_scorebook/screens/: __init__.py  game.py  game_over.py  home.py  lineup_editor.py  load_game.py  modals.py
baseball_scorebook/services/: __init__.py  commands.py  presentation.py
baseball_scorebook/storage/: __init__.py  serializer.py
baseball_scorebook/web/: __init__.py  api.py  server.py  sessions.py
baseball_scorebook/web/static/: index.html
baseball_scorebook/widgets/: __init__.py  defense.py  diamond.py  game_log.py  inning_totals.py  lineup_row.py  scorecard.py  scoreline.py
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  App.test.jsx  index.css  main.jsx
frontend/src/components/: AsciiDiamond.jsx  Modal.jsx  Scorecard.jsx
frontend/src/hooks/: useGameHotkeys.js  (+1 more)
frontend/tests/: game-flow.spec.js
ios/: README.md  project.yml
ios/ScorebookPad/: ContentView.swift  Info.plist  LaunchScreen.storyboard  LineupTemplates.swift  ScorebookCore.swift  ScorebookPadApp.swift  ScorebookStore.swift
ios/ScorebookPad.xcodeproj/: project.pbxproj
ios/ScorebookPadTests/: ScorebookCoreTests.swift
tests/: test_app_smoke.py  test_constants.py  test_event_store.py  test_serializer.py  test_state.py  test_web_api.py
(+8 files in other folders)
