[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseball-scorebook"
version = "0.1.0"
description = "A terminal-based baseball scorebook with live game scoring"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[project.scripts]
baseball-scorebook = "baseball_scorebook.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]
