[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseball-scorebook"
version = "0.1.0"
description = "A browser-based baseball scorebook with live game scoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "textual>=0.80.0",
    "rich>=13.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
baseball-scorebook = "baseball_scorebook.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]
